<resources>
    <string name="app_name">ReNotes</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="change_labelTitle">Title:</string>
    <string name="label_disc">Description:</string>
    <string name="btn_add">Add</string>
    <string name="itemMenu_about">About</string>
    <string name="itemMenu_clearAll">Clear All</string>
    <string name="clearAll_button">Clear All</string>
</resources>
