<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.axel.renotes.add_activity">

    <LinearLayout
        android:id="@+id/layout_addTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_AddTitle"
            android:text="@string/change_labelTitle"
            android:textColor="#222"
            android:textSize="22dp" />
        <EditText
            android:id="@+id/userTitle_Add"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#222"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_AddDesc"
        android:layout_below="@id/layout_addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_AddDesc"
            android:text="@string/label_disc"
            android:textColor="#222"
            android:textSize="22dp"/>
        <EditText
            android:id="@+id/userDesc_Add"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#222"
            android:textSize="20dp"
            android:maxLines="99"
            android:minLines="1"
            android:lines="4"
            android:scrollbars="vertical"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:onClick="OnAddNote"
        android:layout_below="@id/layout_AddDesc"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />
</RelativeLayout>
