<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.axel.renotes.detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/image_detail"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_detail"
                android:text=""
                android:padding="8dp"
                android:textColor="#222"
                android:textSize="18dp"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:id="@+id/desc_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:maxLines="99"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="#222"
                android:textSize="15dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_editDetail"
                    android:text="@string/edit"
                    android:layout_weight="1"
                    android:onClick="btn_editClick"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_deleteDetail"
                    android:text="@string/delete"
                    android:layout_weight="1"
                    android:onClick="btn_deleteClick"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
